meeting timeine with update

--- a/templates/views/components/select.html
+++ b/templates/views/components/select.html
@@ -3,7 +3,7 @@
     <div class="input-group-append">
       <span class="input-group-text text-sm">{{name | strReplace | strLimit 15}}</span>
     </div>
-    <select class="form-control" 
+    <select class="form-control form-control-sm" 
       id="{{name}}" 
       name="{{name}}">
       <option value="">Select {{name}}</option>
