--- a/templates/views/components/textarea.html
+++ b/templates/views/components/textarea.html
@@ -6,7 +6,7 @@
     <textarea class="form-control" 
             rows="3" 
             placeholder="Enter ..." 
-            style="min-height: 81px;"
+            style="min-height: 79px;height: 79px;"
             id="{{name}}" 
             name="{{name}}" 
           >{{if value}}{{value[name]}}{{/if}}</textarea>
