--- a/templates/views/lead_management_add.html
+++ b/templates/views/lead_management_add.html
@@ -4,6 +4,9 @@
     <div class="card-body">
       {{include './components/input_text.html', {type: 'text', name: 'first_name', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'last_name', value: lead} }}
+      {{include './components/input_text.html', {type: 'text', name: 'nationality', value: lead} }}
+      {{include './components/input_text.html', {type: 'text', name: 'country', value: lead} }}
+      {{include './components/input_text.html', {type: 'text', name: 'city', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'job_title', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'company', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'profile_link', value: lead} }}
@@ -11,9 +14,8 @@
       {{include './components/input_text.html', {type: 'text', name: 'business_no', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'mobile', value: lead} }}
       {{include './components/input_text.html', {type: 'text', name: 'second_mobile', value: lead} }}
-      {{include './components/input_text.html', {type: 'text', name: 'email', value: lead} }}
-      {{include './components/input_text.html', {type: 'text', name: 'second_email', value: lead} }}
-      {{include './components/input_text.html', {type: 'text', name: 'nationality', value: lead} }}
+      {{include './components/input_text.html', {type: 'text', name: 'personal_email', value: lead} }}
+      {{include './components/input_text.html', {type: 'text', name: 'work_email', value: lead} }}
       {{include './components/textarea.html', { name: 'description', value: lead} }}
     </div>
     <div class="card-footer">
