--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -71,6 +71,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="/user-logs" class="nav-link">
+            <i class="nav-icon fas fa-user-edit text-purple"></i>
+            <p>User Logs</p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/user-login" class="nav-link">
             <i class="nav-icon fas fa-user-lock text-purple"></i>
             <p>User Login</p>
