lead update logs view

--- a/templates/views/lead_edit.html
+++ b/templates/views/lead_edit.html
@@ -112,6 +112,8 @@
       
       <div class="card-body">
         
+        {{include './components/log_tabs.html', {update_logs: update_logs} }}
+        
       </div>
     </div>
   </div>
