--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -52,7 +52,15 @@
     font-size: 0.715rem !important;
     font-weight: bold;
   }
+  span.text-sm {
+    font-size: 0.715rem !important;
+    font-weight: bold;
+  }
   .input-group-append > span.text-sm {
-    width: 120px;
+    width: 90px;
+  }
+  .form-group {
+    margin: 0px;
+    margin-bottom: 5px;
   }
 </style>
