--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -53,6 +53,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="/bdm-settings-logs" class="nav-link">
+            <i class="nav-icon fas fa-cog text-info"></i>
+            <p>BDM Settings Logs</p></a
+          >
+        </li>
+        <li class="nav-item">
           <a href="/lead-management" class="nav-link">
             <i class="nav-icon fas fa-folder-open text-purple"></i>
             <p>Lead Management</p>
