--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -7,7 +7,7 @@
           <i class="fas fa-search"></i> Search
         </h3>
       </div>
-      <div class="card-body">
+      <div class="card-body p-2">
         <!-- name -->
         {{include './components/search_box.html', { name: 'name' } }}
         <!-- ifa -->
@@ -24,7 +24,7 @@
           <i class="fas fa-cog"></i> Option
         </h3>
       </div>
-      <div class="card-body">
+      <div class="card-body p-2">
         <div class="form-group">
           <a href="/bdm-settings/add" class="btn bg-teal btn-block">
             <i class="fas fa-plus"></i>
@@ -43,7 +43,7 @@
       </div>
       <div class="card-body p-0">
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table table-bordered table-hover table-sm">
             <thead>
               <tr>
                 <th><i class="far fa-calendar"></i> Date</th>
@@ -63,7 +63,20 @@
                 </td>
                 <td>
                   <i class="far fa-file"></i>
-                  {{$value.name}}
+                  <a
+                    href="/bdm-settings/edit/{{$value._id.toString()}}"
+                    rel="nofollow noopener noreferrer"
+                    class="text-info"
+                    id="lead{{$index}}"
+                    data-ot="Click to view details"
+                    data-ot-delay="0"
+                    data-ot-tip-joint="bottom"
+                    data-ot-hide-delay="0"
+                    data-ot-target="#lead{{$index}}"
+                    data-ot-fixed="true"
+                  >
+                    {{$value.name}}
+                  </a>
                 </td>
                 <td>
                   <i class="far fa-user"></i>
@@ -80,19 +93,29 @@
                     method="post"
                     id="formBdmSettingsDelete{{$index}}"
                   >
-                    <a
-                      href="/bdm-settings/edit/{{$value._id.toString()}}"
-                      class="btn bg-teal btn-sm"
-                    >
-                      <i class="fas fa-edit"></i> Edit</a
-                    >
-                    <button
-                      type="button"
-                      class="btn bg-maroon btn-sm"
-                      onclick="deleteBdmSettings('#formBdmSettingsDelete{{$index}}');"
-                    >
-                      <i class="fas fa-times"></i> Delete
-                    </button>
+                    <div class="btn-group">
+                      <button type="button" class="btn bg-teal btn-sm p-1">
+                        option
+                      </button>
+                      <button
+                        type="button"
+                        class="btn bg-teal dropdown-toggle dropdown-icon btn-sm p-1"
+                        data-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        <span class="sr-only">Toggle Dropdown</span>
+                      </button>
+                      <div class="dropdown-menu" role="menu">
+                        <a
+                          class="dropdown-item"
+                          href="#"
+                          rel="nofollow noopener noreferrer"
+                          onclick="deleteBdmSettings('#formBdmSettingsDelete{{$index}}');"
+                        >
+                          <i class="fas fa-times text-maroon"></i> Delete
+                        </a>
+                      </div>
+                    </div>
                   </form>
                 </td>
               </tr>
