--- a/templates/views/bdm_settings_add.html
+++ b/templates/views/bdm_settings_add.html
@@ -1,11 +1,12 @@
 {{extend './layout.html'}} {{block 'content'}}
 <div class="card">
-  <div class="card-body">
-    <form
-      action="/bdm-settings/create"
-      method="post"
-      id="formBdmSettingsCreate"
-    >
+  <form action="/bdm-settings/create" method="post" id="formBdmSettingsCreate">
+    <div class="card-header">
+      <h3 class="card-title font-weight-bold">
+        <i class="fas fa-plus"></i> Add Settings
+      </h3>
+    </div>
+    <div class="card-body p-2">
       <!-- name -->
       {{include './components/input_text.html', {type: 'text', name: 'name',
       value: body} }}
@@ -18,6 +19,8 @@
       <!-- status -->
       {{include './components/select.html', { name: 'status', value: user,
       options: LEAD_STATUS} }}
+    </div>
+    <div class="card-footer p-2">
       <div class="form-group">
         <button
           type="button"
@@ -27,8 +30,8 @@
           <i class="fas fa-plus"></i> Add Settings
         </button>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
 {{/block}}
 <!-- javascript -->
