--- a/templates/views/components/input_datetime.html
+++ b/templates/views/components/input_datetime.html
@@ -1,24 +1,27 @@
 <div class="form-group">
   <div class="input-group date">
     <div class="input-group-append">
-      <span class="input-group-text text-sm">{{name | strReplace | strLimit 15}}</span>
+      <span class="input-group-text text-sm"
+        >{{name | strReplace | strLimit 14}}</span
+      >
     </div>
-    
-    <input 
-      type="text" 
-      id="{{name}}" 
-      name="{{name}}" 
-      class="form-control datetimepicker-input form-control-sm" 
+
+    <input
+      type="text"
+      id="{{name}}"
+      name="{{name}}"
+      class="form-control datetimepicker-input form-control-sm"
       data-target="#{{name}}"
-      value="{{if value}}{{value[name]}}{{/if}}" 
+      value="{{if value}}{{value[name]}}{{/if}}"
     />
-    <div class="input-group-append" data-target="#{{name}}" data-toggle="datetimepicker">
+    <div
+      class="input-group-append"
+      data-target="#{{name}}"
+      data-toggle="datetimepicker"
+    >
       <div class="input-group-text"><i class="{{icon}}"></i></div>
-    </div> 
+    </div>
   </div>
 
-  <small 
-    class="form-text text-danger"
-    id="{{name}}_error"
-  ></small>
+  <small class="form-text text-danger" id="{{name}}_error"></small>
 </div>
