--- a/templates/views/components/search_box.html
+++ b/templates/views/components/search_box.html
@@ -1,13 +1,15 @@
 <div class="form-group">
   <div class="input-group">
     <div class="input-group-append">
-      <span class="input-group-text text-sm">{{name | strReplace | strLimit 15}}</span>
+      <span class="input-group-text text-sm"
+        >{{name | strReplace | strLimit 14}}</span
+      >
     </div>
-    <input 
+    <input
       type="search"
-      class="form-control form-control-sm" 
-      id="{{name}}" 
-      name="{{name}}" 
+      class="form-control form-control-sm"
+      id="{{name}}"
+      name="{{name}}"
       onsearch="search();"
     />
   </div>
