--- a/templates/views/components/textarea.html
+++ b/templates/views/components/textarea.html
@@ -1,18 +1,20 @@
 <div class="form-group">
   <div class="input-group">
     <div class="input-group-append">
-      <span class="input-group-text text-sm">{{name | strReplace | strLimit 15}}</span>
+      <span class="input-group-text text-sm"
+        >{{name | strReplace | strLimit 14}}</span
+      >
     </div>
-    <textarea class="form-control" 
-            rows="3" 
-            placeholder="Enter ..." 
-            style="min-height: 79px;height: 79px;"
-            id="{{name}}" 
-            name="{{name}}" 
-          >{{if value}}{{value[name]}}{{/if}}</textarea>
+    <textarea
+      class="form-control"
+      rows="3"
+      placeholder="Enter ..."
+      style="min-height: 79px; height: 79px"
+      id="{{name}}"
+      name="{{name}}"
+    >
+{{if value}}{{value[name]}}{{/if}}</textarea
+    >
   </div>
-  <small 
-    class="form-text text-danger"
-    id="{{name}}_error"
-  ></small>
+  <small class="form-text text-danger" id="{{name}}_error"></small>
 </div>
