--- a/templates/views/user_maintenance.html
+++ b/templates/views/user_maintenance.html
@@ -10,9 +10,13 @@
           <i class="fas fa-search"></i> Search
         </h3>
       </div>
-      <div class="card-body">
-        <!-- name -->
-        {{include './components/search_box.html', { name: 'name' } }}
+      <div class="card-body p-2">
+        <!-- first name -->
+        {{include './components/search_box.html', { name: 'first_name' } }}
+        <!-- last name -->
+        {{include './components/search_box.html', { name: 'last_name' } }}
+        <!-- email -->
+        {{include './components/search_box.html', { name: 'email' } }}
         <!-- type -->
         {{include './components/search_select.html', { name: 'type', options:
         USER_TYPE } }}
@@ -27,7 +31,7 @@
           <i class="fas fa-cog"></i> Option
         </h3>
       </div>
-      <div class="card-body">
+      <div class="card-body p-2">
         <div class="form-group">
           <a
             href="/user-maintenance/add"
@@ -49,29 +53,14 @@
       </div>
       <div class="card-body p-0">
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table table-bordered table-hover table-sm">
             <thead>
               <tr>
-                <th>
-                  <i class="far fa-calendar"></i>
-                  Date
-                </th>
-                <th>
-                  <i class="far fa-user"></i>
-                  Name
-                </th>
-                <th>
-                  <i class="far fa-envelope"></i>
-                  Email
-                </th>
-                <th>
-                  <i class="far fa-id-card"></i>
-                  Type
-                </th>
-                <th>
-                  <i class="far fa-id-badge"></i>
-                  Status
-                </th>
+                <th><i class="far fa-calendar"></i> Date</th>
+                <th><i class="far fa-user"></i>Name</th>
+                <th><i class="far fa-envelope"></i>Email</th>
+                <th><i class="far fa-id-card"></i>Type</th>
+                <th><i class="far fa-id-badge"></i>Status</th>
                 <th>Option</th>
               </tr>
             </thead>
@@ -109,9 +98,37 @@
                 <td>{{@$value.type | userTypeBadge | strReplace}}</td>
                 <td>{{@$value.status | userStatusBadge | strReplace}}</td>
                 <td>
-                  <a href="/user-logs?_id={{$value._id.toString()}}">
-                    User Logs
-                  </a>
+                  <div class="btn-group">
+                    <button type="button" class="btn bg-teal btn-sm p-1">
+                      option
+                    </button>
+                    <button
+                      type="button"
+                      class="btn bg-teal dropdown-toggle dropdown-icon btn-sm p-1"
+                      data-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      <span class="sr-only">Toggle Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu" role="menu">
+                      <a
+                        class="dropdown-item"
+                        href="/user-logs?_id={{$value._id.toString()}}"
+                        rel="nofollow noopener noreferrer"
+                      >
+                        <i class="fas fa-user-edit text-purple"></i>
+                        User Log
+                      </a>
+                      <a
+                        class="dropdown-item"
+                        href="/user-login?_id={{$value._id.toString()}}"
+                        rel="nofollow noopener noreferrer"
+                      >
+                        <i class="fas fa-user-lock text-purple"></i>
+                        User Login
+                      </a>
+                    </div>
+                  </div>
                 </td>
               </tr>
               {{/each}}
@@ -138,8 +155,14 @@
   const page = parseInt('{{users.page}}');
   const totalPages = parseInt('{{users.totalPages}}');
   const totalDocs = parseInt('{{users.totalDocs}}');
-  document.getElementById('name').value = decodeHTML(
-    '{{search.name | escapeBackslash}}'
+  document.getElementById('first_name').value = decodeHTML(
+    '{{search.first_name | escapeBackslash}}'
+  );
+  document.getElementById('last_name').value = decodeHTML(
+    '{{search.last_name | escapeBackslash}}'
+  );
+  document.getElementById('email').value = decodeHTML(
+    '{{search.email | escapeBackslash}}'
   );
   document.getElementById('type').value = decodeHTML(
     '{{search.type | escapeBackslash}}'
@@ -150,11 +173,15 @@
 
   function search(page = 1) {
     let url = window.location.href.split('?')[0];
-    let name = $('#name').val();
+    let first_name = $('#first_name').val();
+    let last_name = $('#last_name').val();
+    let email = $('#email').val();
     let type = $('#type').val();
     let status = $('#status').val();
     url += `?page=${page}`;
-    if (name) url += `&name=${name}`;
+    if (first_name) url += `&first_name=${first_name}`;
+    if (last_name) url += `&last_name=${last_name}`;
+    if (email) url += `&email=${email}`;
     if (type) url += `&type=${type}`;
     if (status) url += `&status=${status}`;
     window.location.href = url;
