--- a/templates/views/user_maintenance_edit.html
+++ b/templates/views/user_maintenance_edit.html
@@ -3,17 +3,17 @@
 <!-- content -->
 {{block 'content'}}
 <div class="card">
-  <div class="card-header">
-    <h3 class="card-title font-weight-bold">
-      <i class="fas fa-user-plus"></i> Edit User
-    </h3>
-  </div>
   <form
     action="/user-maintenance/update/{{user._id.toString()}}"
     method="post"
     id="formUserUpdate"
   >
-    <div class="card-body">
+    <div class="card-header">
+      <h3 class="card-title font-weight-bold">
+        <i class="fas fa-user-plus"></i> Edit User
+      </h3>
+    </div>
+    <div class="card-body p-2">
       <!-- first name -->
       {{include './components/input_text.html', {type: 'text', name:
       'first_name', value: user} }}
@@ -36,7 +36,7 @@
       {{include './components/select.html', { name: 'status', value: user,
       options: USER_STATUS} }}
     </div>
-    <div class="card-footer">
+    <div class="card-footer p-2">
       <div class="form-group">
         <button
           type="button"
