--- a/templates/views/user_online.html
+++ b/templates/views/user_online.html
@@ -6,7 +6,7 @@
     </h3>
   </div>
   <div class="card-body p-0">
-    <table class="table">
+    <table class="table table-bordered table-hover table-sm">
       <thead>
         <tr>
           <th><i class="far fa-user"></i> Name</th>
