fixed logs issue, update setonline functionality

--- a/templates/views/components/textarea.html
+++ b/templates/views/components/textarea.html
@@ -9,7 +9,7 @@
       class="form-control"
       rows="3"
       placeholder="Enter ..."
-      style="min-height: 79px; height: 79px"
+      style="min-height: 79px; height: 79px; resize: none"
       id="{{name}}"
       name="{{name}}"
     >
