--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -54,7 +54,7 @@
         </li>
         <li class="nav-item">
           <a href="/bdm-settings-logs" class="nav-link">
-            <i class="nav-icon fas fa-cog text-info"></i>
+            <i class="nav-icon fas fa-cogs text-info"></i>
             <p>BDM Settings Logs</p></a
           >
         </li>
