--- a/templates/views/user_logs.html
+++ b/templates/views/user_logs.html
@@ -62,6 +62,7 @@
                     data-ot-hide-delay="0"
                     data-ot-target="#user{{$index}}"
                     data-ot-fixed="true"
+                    target="_blank"
                   >
                     {{$value.current.first_name | titleCase}}
                     {{$value.current.last_name | titleCase}}
