--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -74,6 +74,7 @@
                     data-ot-hide-delay="0"
                     data-ot-target="#lead{{$index}}"
                     data-ot-fixed="true"
+                    target="_blank"
                   >
                     {{$value.name}}
                   </a>
@@ -106,6 +107,14 @@
                         <span class="sr-only">Toggle Dropdown</span>
                       </button>
                       <div class="dropdown-menu" role="menu">
+                        <a
+                          class="dropdown-item"
+                          href="/bdm-settings-logs?_id={{$value._id.toString()}}"
+                          rel="nofollow noopener noreferrer"
+                          target="_blank"
+                        >
+                          <i class="fas fa-cogs text-info"></i> Settings Log
+                        </a>
                         <a
                           class="dropdown-item"
                           href="#"
