--- a/templates/views/user_logs_details.html
+++ b/templates/views/user_logs_details.html
@@ -3,7 +3,7 @@
 <!-- content -->
 {{block 'content'}}
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-12">
     <div class="card">
       <div class="card-header">
         <h3 class="card-title font-weight-bold">
@@ -11,47 +11,33 @@
         </h3>
       </div>
       <div class="card-body p-0">
-        <table class="table table-bordered table-sm">
+        <table class="table table-bordered table-hover table-sm">
           <thead>
             <tr>
-              <th>Fields</th>
-              <th>Values</th>
+              <th style="width: 20%">column</th>
+              <th style="width: 40%">current</th>
+              <th style="width: 40%">previous</th>
             </tr>
           </thead>
           <tbody>
+            <!-- set variable -->
+            {{set modified = user_log.modified}}
+            <!--set variable -->
+            {{set previous = user_log.previous}}
+            <!-- loop -->
             {{each user_log.current}}
-            <tr class="{{if user_log.modified.includes($index)}}bg-teal{{/if}}">
-              <td><strong>{{$index}}</strong></td>
-              <td>{{$value}}</td>
-            </tr>
-            {{/each}}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title font-weight-bold">
-          <i class="fas fa-table"></i> Table
-        </h3>
-      </div>
-      <div class="card-body p-0">
-        <table class="table table-bordered table-sm">
-          <thead>
             <tr>
-              <th>Fields</th>
-              <th>Values</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{each user_log.previous}}
-            <tr
-              class="{{if user_log.modified.includes($index)}}bg-maroon{{/if}}"
-            >
-              <td>{{$index}}</td>
-              <td>{{$value}}</td>
+              <td style="font-size: 12px">{{$index}}</td>
+              <td style="font-size: 12px">
+                {{if modified.includes($index)}}
+                <i class="fas fa-check-circle text-teal"></i>
+                {{/if}} {{$value}}
+              </td>
+              <td style="font-size: 12px">
+                {{if modified.includes($index)}}
+                <i class="fas fa-times-circle text-maroon"></i>
+                {{/if}} {{previous[$index]}}
+              </td>
             </tr>
             {{/each}}
           </tbody>
